# pool_frontend_zcash

./: README.md  nginx.conf.example  pool.diff  poolrestapi.cfg.example  zcash.cfg.example
src/: CMakeLists.txt  address.h  bignum.h  block.h  equihash_original.cpp  equihash_original.h  main.cpp  protocol.proto  src.kdev4  stratum.cpp  stratum.h  uint256.h  util.h  zcashpool.cpp  zcashpool.h  zmtp.cpp  zmtp.h  zmtpProto.h
src/.kdev4/: src.kdev4
src/cmake/: Findconfig4cpp.cmake  Findleveldb.cmake  Findlibp2p.cmake  Findpoolcore.cmake
